2012-05-20  6.7.7-1 Cristy  <quetzlzacatenango@image...>
  * In rare cases, caption would not word wrap properly (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21044).

2012-05-20  6.7.7-1 Anthony Thyssen <A.Thyssen@griffith...>
  * Delegates now 'spawn' faster (replaced 2 second sleep!) (for "show:")

2012-05-17  6.7.7-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.7-0, SVN revision 7980.

2012-05-17  6.7.7-0 Cristy  <quetzlzacatenango@image...>
  * Group4-compressed TIFF / PDF image formats stopped working (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=21039).
  * Auto convert images in the grayscale colorspace to sRGB (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21031).

2012-05-16  6.7.6-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-10, SVN revision 7952.

2012-05-14  6.7.6-10 Glenn Randers-Pehrson <glennrp@image...>
  * Reset color info in grayscale PNG images to gamma=1.0, undefined
    rendering_intent and chromaticity only when reading images that don't
    have a gAMA, sRGB, or cHRM chunk.

2012-05-14  6.7.6-10 Anthony Thyssen <A.Thyssen@griffith...>
  * Added a low level "Cosine" Windowing Filter -- Request by Nicholas Robidox
  * Fixed Kaiser Window Filter (was producing all zeros!)
  * Kaiser Window Function now uses the working value "filter:kaiser-beta"
    (formerly "filter:alpha" in previous versions)
  * Setting the expert option "filter:kaiser-alpha" will override this,
    (after being multiplied by PI).
  * Added resampling 'weight' sanity check in EWA resampling.
  * Set default for histogram:unique-colors to be 'true' when undefined
    Returning it to previous behaviour.
  * Refactor of InterpretImageProperties() (percent escape sub-stitutions)
  * Add "gamma" as a -set and % escape to access image gamma meta-data

2012-05-05  6.7.6-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-9, SVN revision 7812.
