@@ -1,6 +1,8 @@
 2012-05-20  6.7.7-1 Cristy  <quetzlzacatenango@image...>
   * In rare cases, caption would not word wrap properly (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21044).
+  * Set the JPEG image colorspace after the columns / rows are set (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21059).
 
 2012-05-20  6.7.7-1 Anthony Thyssen <A.Thyssen@griffith...>
   * Delegates now 'spawn' faster (replaced 2 second sleep!) (for "show:")
